[tool.poetry]
name = "rigol-dp700"
version = "1.0.0"
description = "Support serial control for Rigol DP700 series power supply"
authors = ["xiaoling <samuel.ling.xiao@qq.com>"]
readme = "README.md"
packages = [{include = "rigol_dp700/*"}]

[tool.poetry.dependencies]
python = "3.10.11"
pyserial = "^3.5"
black = "^25.1.0"
mypy = "^1.17.0"
ruff = "^0.12.4"
pre-commit = "^4.2.0"
pydantic = {extras = ["email"], version = "^2.11.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
